# kernel-rag-mcp

./: .gitignore  AGENTS.md  GAP_ANALYSIS.md  Kernel-RAG-MCP 设计目标.md  README.md  TEST_REPORT.md  pyproject.toml  性能相关的 RAG 索引内容补充.md
.opencode/: opencode.json
docs/architecture/: overview.md
docs/causal-graph/: indexer.md
docs/design/: principles.md  roadmap.md
docs/git-history/: indexer.md  patch-types.md
docs/indexer/: overview.md
docs/integration/: overview.md
docs/kconfig/: indexer.md
docs/mcp-tools/: overview.md
docs/ops/: overview.md
docs/performance/: indexing.md
docs/retriever/: overview.md
docs/storage/: overview.md
scripts/: ingest.py  rebuild_background.py  rebuild_index.py
src/kernel_rag_mcp/: cli.py  config.py
src/kernel_rag_mcp/indexer/: causal_indexer.py  code_indexer.py  delta_indexer.py  git_indexer.py  incremental_indexer.py  main.py  performance_indexer.py  symbol_indexer.py
src/kernel_rag_mcp/retriever/: context_assembler.py  delta_searcher.py  hybrid_search.py
src/kernel_rag_mcp/server/: mcp_adapter.py  mcp_server.py  mcp_server_http.py  mcp_server_internal.py  router.py  stdio_compat.py
src/kernel_rag_mcp/storage/: __init__.py  graph_store.py  metadata_store.py  sparse_store.py  vector_store.py
tests/: conftest.py
tests/design/: e2e.md  fixtures.md  git-history.md  indexer.md  integration.md  kconfig.md  mcp-tools.md  performance.md  retriever.md  storage.md
tests/integration/: test_e2e.py
tests/unit/indexer/: test_causal_graph.py  test_code_indexer.py  test_delta_indexer.py  test_git_commit_embedding.py  (+3 more)
(+44 files in other folders)
