[project]
name = "kernel-rag-mcp"
version = "0.1.0"
description = "Linux kernel RAG + MCP tool chain"
readme = "README.md"
license = {text = "MIT/Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.0",
    "qdrant-client>=1.7.0",
    "meilisearch>=0.28.0",
    "networkx>=3.2",
    "tree-sitter>=0.20.0",
    "tree-sitter-c>=0.20.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "z3-solver>=4.12.0",
    "kconfiglib>=14.1.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[project.scripts]
kernel-rag = "kernel_rag_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kernel_rag_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "kernel: marks tests that require a real kernel repo",
    "slow: marks tests that are slow to run",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
